feature: add component list validate function.
